--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>My Website</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      .banner {
+        background-color: #f2f2f2;
+        padding: 20px;
+        text-align: center;
+      }
+
+      .banner img {
+        max-width: 100%;
+        height: auto;
+      }
+
+      .play-store-button {
+        display: inline-block;
+        background-color: #113dcd;
+        color: white;
+        text-decoration: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-size: 18px;
+        margin-top: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="banner">
+      <a class="play-store-button" href="rdiscovery://">Go to RDiscovery</a>
+    </div>
+
+    <!-- Rest of your website content -->
+  </body>
+</html>
