adding R Discovery app CTA

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
       function launchApp1() {
         var appScheme = "https://discovery.researcher.life";
-        window.location.href = url;
+        window.location.href = appScheme;
       }
 
       function launchApp2() {
         var appScheme = "rdiscovery://discovery.researcher.life";
-        window.location.href = url;
+        window.location.href = appScheme;
       }
     </script>
     <div class="banner">
